# technopark_C_HW

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  input.txt  main.c  matrix.c  num_counts.h  output.txt
include/: matrix.h  num_counts.h  sort.h  static_sort.h
src/: gtests.cpp  main.c  matrix.c  num_counts.c  shared_sort.c  shared_sort.h  static_sort.c
tests/input/: test3.txt  test4.txt  test5.txt
tests/output/: test3.txt  test4.txt  test5.txt
